--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <meta charset="utf-8" />
     </head>
     <body>
+        <!-- Physics scripts -->
+        <script src="src/phys/body.js"></script>
+        <script src="src/phys/manifold.js"></script>
+        <script src="src/phys/world.js"></script>
+        
+        <!-- Gameplay scripts -->
         <script src="src/sketch.js"></script>
     </body>
 </html>
