--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script src="src/p5.js"></script>
+        <script src="src/lib/p5.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <meta charset="utf-8" />
     </head>
@@ -12,6 +12,9 @@
         <script src="src/phys/world.js"></script>
         
         <!-- Gameplay scripts -->
+        <script src="src/gameplay/ball.js"></script>
+        <script src="src/gameplay/goal.js"></script>
+        <script src="src/gameplay/obstacle.js"></script>
         <script src="src/sketch.js"></script>
     </body>
 </html>
