--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <!-- Physics scripts -->
+        <script src="src/phys/collider.js"></script>
         <script src="src/phys/body.js"></script>
         <script src="src/phys/manifold.js"></script>
         <script src="src/phys/world.js"></script>
